<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/regisztracioTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/ujtabor"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/tabrornevEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/tabor_neve"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_below="@id/regisztracioTextView"
        />

    <EditText
        android:id="@+id/infoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/info"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_below="@id/tabrornevEditText"
        />

    <EditText
        android:id="@+id/arEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/ar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_below="@id/infoEditText"
        />

    <EditText
        android:id="@+id/ferohelyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/f_r_hely"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_below="@id/arEditText"
        />


    <Button
        android:id="@+id/buttonRegisztacioVegleg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="taborveglegesit"
        android:text="@string/l_trehoz_s"
        android:layout_below="@id/ferohelyEditText"
        />
    <Button
        android:id="@+id/buttonRegisztacioMegse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="megse"
        android:text="@string/megse"
        android:layout_below="@id/buttonRegisztacioVegleg"
        />


</RelativeLayout>