<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisztracioActivity">

    <TextView
        android:id="@+id/regisztracioTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/regisztracio"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/felhasznalonevEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/felhasznalonev"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPersonName"
        android:layout_below="@id/regisztracioTextView"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/e_mail_cim"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textEmailAddress"
        android:layout_below="@id/felhasznalonevEditText"
        />

    <EditText
        android:id="@+id/jelszoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/jelszo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword"
        android:layout_below="@id/emailEditText"
        />

    <EditText
        android:id="@+id/jelszoujraEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/jelszomegerositese"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword"
        android:layout_below="@id/jelszoEditText"
        />

    <EditText
        android:id="@+id/telefonszamEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/Telefonszam"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="phone"
        android:layout_below="@id/jelszoujraEditText"
        />

    <RadioGroup
        android:id="@+id/felhasznalotipusRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/telefonszamEditText">

        <RadioButton
            android:id="@+id/taborozoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taboroz"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taboroztato"/>

    </RadioGroup>

    <Button
        android:id="@+id/buttonRegisztacioVegleg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="regisztralas"
        android:text="@string/regisztracio"
        android:layout_below="@id/felhasznalotipusRadioGroup"
        />
    <Button
        android:id="@+id/buttonRegisztacioMegse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="megse"
        android:text="@string/megse"
        android:layout_below="@id/buttonRegisztacioVegleg"
        />


</RelativeLayout>