<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaboroklistajaActivity">


        <LinearLayout
            android:background="@color/grey2"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/keresesET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/kereses"
                android:inputType="text"
                android:layout_below="@id/jelszoujraEditText"
                />
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kereses"
                android:textSize="15dp"
                android:onClick="kereses">

            </Button>



        </LinearLayout>


    <LinearLayout
        android:background="@color/grey"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/taboraim"
            android:textSize="11sp"
            android:onClick="taboraim">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:text="@string/nezet1"
            android:textSize="11sp"
            android:onClick="nezetvaltoztat"
            >

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="3"
            android:text="@string/kijelentkezes"
            android:textSize="11sp"
            android:onClick="kijelentkezes">


        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="3"
            android:text="@string/uj"
            android:textSize="11sp"
            android:onClick="ujtaborletrehozasa">

        </Button>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="16dp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
